e2e/tests/all/snapshots/visually_hidden_rest_desktop.snap
---
source: e2e/src/suite.rs
description: visually_hidden at desktop (rest)
expression: tree
---
generic
  link "Skip to content"
    StaticText "Skip to content"
main
  StaticText "Content"
