e2e/tests/all/snapshots/visually_hidden_rest_mobile.snap
---
source: e2e/src/suite.rs
description: visually_hidden at mobile (rest)
expression: tree
---
link "Skip to content"
  StaticText "Skip to content"
main
  StaticText "Content"
